resources/css/freyja/sidebar.css
:root {
    --sidebar-width: 15rem; /* 240px */
    --sidebar-expanded: 16rem; /* 256px */
}

.content-wrapper {
    margin-left: var(--sidebar-width);
}

.w-sidebar {
    width: min(var(--sidebar-width), 90vw);
}
.h-sidebar {
    height: calc(100vh - 3rem);
}

.main-sidebar {
    width: var(--sidebar-width);
    --tw-bg-opacity: 1;
    background-color: var(--sidebar-background, hsl(var(--si)/var(--tw-bg-opacity)));
    --tw-text-opacity: 1;
    color: var(--sidebar-text, hsl(var(--sic)/var(--tw-text-opacity)));

    background-size: var(--sidebar-width) 208px;
    background-repeat: no-repeat;
    transition: all 0.3s ease-in-out, width 0.3s ease-in-out;

    .campaign-updated {
        color: hsl(var(--sic)/var(--tw-text-opacity, 0.7));
    }

    .sidebar-menu {
        color: var(--sidebar-text, hsl(var(--sic)/var(--tw-text-opacity, 1)));
        li {
            a, span {
                color: var(--sidebar-text, hsl(var(--sic)/var(--tw-text-opacity, 1)));
                letter-spacing: 1.5px;
            }

            a {
                &:hover {
                    --tw-bg-opacity: .7;
                    background: hsl(var(--sif)/var(--tw-bg-opacity));
                    color: var(--sidebar-text, hsl(var(--sic)/var(--tw-text-opacity, 1)));
                }
            }
        }

        li.active > a, li.active.sidebar-section {
            background: hsl(var(--sif)/var(--tw-bg-opacity, .7));
        }
    }
}
.main-sidebar-placeholder {
    background-image: var(--sidebar-placeholder, url('https://th.kanka.io/kZFdGAs5iN41r9mDqNqix8BxaAA=/240x208/smart/src/app/backgrounds/mountain-background-medium.jpg'));
}

section.sidebar-campaign {
    background: linear-gradient(180deg, rgba(51, 51, 51, 0) 0%, var(--sidebar-background, hsl(var(--si)/var(--tw-bg-opacity, 1))) 100%);
}
.bg-sidebar {
    background: var(--sidebar-background, hsl(var(--si)/var(--tw-bg-opacity, 1)));
}

.main-footer {
    margin-left: var(--sidebar-width);
}


.sidebar-toggle [data-sidebar="collapse"] {
    display: none;
}
.sidebar-toggle [data-sidebar="expand"] {
    display: unset;
}

body.sidebar-collapse .sidebar-toggle [data-sidebar="collapse"] {
    display: unset;
}
body.sidebar-collapse .sidebar-toggle [data-sidebar="expand"] {
    display: none;
}


/** Mobile **/
@media (max-width: 767px) {
    .main-sidebar {
        margin-left: calc(0px - var(--sidebar-width));
    }
    .content-wrapper, .main-footer {
        margin-left: 0;
    }


    .sidebar-collapse .main-sidebar {
        margin-left: 0;
    }
    .sidebar-collapse .content-wrapper, .sidebar-collapse .main-footer {
        margin-left: 0;
    }
}
@media (min-width: 768px) {
    .md\:w-sidebar {
        width: min(var(--sidebar-width), 90vw);
    }
    .sidebar-collapse .main-sidebar {
        margin-left: calc(0px - var(--sidebar-width));
        z-index: 850;
    }
    .sidebar-collapse .content-wrapper, .sidebar-collapse .right-side, .sidebar-collapse .main-footer {
        margin-left: 0 !important;
        /*z-index: 840;*/
    }

    .sidebar-toggle [data-sidebar="collapse"] {
        display: unset;
    }
    .sidebar-toggle [data-sidebar="expand"] {
        display: none;
    }

    body.sidebar-collapse .sidebar-toggle [data-sidebar="collapse"] {
        display: none;
    }
    body.sidebar-collapse .sidebar-toggle [data-sidebar="expand"] {
        display: unset;
    }
}

